@@ -1,3 +1,8 @@
+Wed Apr 26 16:18:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* sim-events.c (update_time_from_event): Add more detailed event
+ 	tracing.
+
 2000-03-30  Dave Brolley  <brolley@redhat.com>
 
 	* aclocal.m4 (cgen): Use guile to run cgen.
